Add modalWrap & change modal shadow style.

--- a/ui-hncb.css
+++ b/ui-hncb.css
@@ -3,7 +3,7 @@
 /***** Theme Colors *****/
 
 /* Spring  */
-.hn-mainWrap, .hn-windowWrap {
+.hn-mainWrap, .hn-windowWrap, .hn-modalWrap {
     -fx-base:            rgb(211, 248, 162);
 
     -fx-base-ultraLight: rgb(245, 255, 230);
@@ -839,29 +839,31 @@
 }
 
 /*** 11. Modals ***/
-
+.hn-modalWrap {
+    -fx-background-color: transparent;
+}
 .hn-Modal-BkgMask {
     -fx-background-color: rgba(66,66,66,0.9);
 }
 .hn-Modal .hn-Modal-Alert {
-    -fx-background-radius: 5;
+    -fx-background-radius: 1;
     -fx-background-color: linear-gradient(to bottom, #ffaf34 0, #b3740a 6%);
 }
 .hn-Modal .hn-Modal-Error {
-    -fx-background-radius: 5;
+    -fx-background-radius: 1;
     -fx-background-color: linear-gradient(to bottom, #f57169 0, #cc1717 6%);
 }
 .hn-Modal .hn-Modal-Info {
-    -fx-background-radius: 5;
+    -fx-background-radius: 1;
     -fx-background-color: linear-gradient(to bottom, #6fc0ff 0, #279cd1 6%);
 }
 .hn-Modal .hn-Modal-Global {
-    -fx-background-radius: 5;
+    -fx-background-radius: 1;
     -fx-background-color: linear-gradient(to bottom, #56727a 0, #104155 6%);
 }
 .hn-Modal .hn-Modal-corners {
     -fx-fill: linear-gradient(#32496A 10%, black 100%);
-    -fx-background-radius: 5;
+    -fx-background-radius: 1;
 }
 .hn-Modal .hn-Modal-title {
     -fx-font-size: 1.1em;
@@ -875,7 +877,7 @@
 }
 .hn-Modal .hn-Modal-content {
     -fx-background-color: linear-gradient(rgba(255,255,255,1) 0, rgba(255,255,255,0.7) 100%) ;
-    -fx-background-radius: 3;
+    -fx-background-radius: 2;
 }
 .hn-Modal .hn-Modal-Btns {
     -fx-background-color: linear-gradient(to bottom, #222222 0, #333333 10%);
@@ -886,27 +888,27 @@
 }
 .hn-Modal .hn-Modal-shadow {
     -fx-background-color: linear-gradient(to bottom, #333333 0, rgba(255,255,255,0) 100%);
-    -fx-background-radius: 5;
+    -fx-background-radius: 1;
 }
 /* Modal Button */
 .hn-Modal .hn-Modal-footer .button {
-    -fx-background-color: transparent, #dddddd, linear-gradient(to bottom,#000000 0%,#555555 100%), linear-gradient(to bottom, #666666 0%, #111111 100%);
+    -fx-background-color: transparent, transparent, linear-gradient(to bottom,#000000 0%,#555555 100%), linear-gradient(to bottom, #666666 0%, #111111 100%);
     -fx-background-radius: 2;
     -fx-padding: 10 20 11 20;
     -fx-text-fill: white;
 }
 .hn-Modal .hn-Modal-footer .button:focused {
-    -fx-background-color: transparent, #75d3fc, linear-gradient(to bottom, #b5d9ee 0%, #75d3fc 100%), linear-gradient(to bottom, #888888 0%, #222222 100%);
+    -fx-background-color: transparent, #75d3fc, linear-gradient(to bottom, #b5d9ee 0%, #75d3fc 100%), linear-gradient(to bottom, #666666 0%, #222222 100%);
 }
 .hn-Modal .hn-Modal-footer .button:focused:hover {
     -fx-background-color: transparent, #75d3fc, linear-gradient(to bottom,#b5d9ee 0%, #75d3fc 100%), linear-gradient(to bottom,#666666 0%,#222222 100%);
 }
 .hn-Modal .hn-Modal-footer .button:hover {
-    -fx-background-color: transparent,transparent, linear-gradient(to bottom,#000000 0%,#333333 100%), linear-gradient(to bottom,#555555 0%,#222222 100%);
+    -fx-background-color: transparent, #75d3fc, linear-gradient(to bottom,#000000 0%,#333333 100%), linear-gradient(to bottom,#555555 0%,#222222 100%);
 }
 .hn-Modal .hn-Modal-footer .button:focused:hover:pressed,
 .hn-Modal .hn-Modal-footer .button:armed {
-    -fx-background-color: transparent,transparent, linear-gradient(to bottom,#000000 0%,#333333 100%), linear-gradient(to bottom,#000000 0%,#333333 40%);
+    -fx-background-color: transparent, #75d3fc, linear-gradient(to bottom,#000000 0%,#333333 100%), linear-gradient(to bottom,#000000 0%,#333333 40%);
     -fx-text-fill: #cccccc;
 }
 .hn-Modal .hn-Modal-footer .button:disabled {
