--- a/ui-hncb.css
+++ b/ui-hncb.css
@@ -291,6 +291,9 @@
     -fx-background-radius: 3 3 0 0;
     -fx-effect: innershadow(three-pass-box, #999999, 5, 0.2, 1, 1);
 }
+.hn-serverUrl .label {
+    -fx-text-fill: #006495;
+}
 .hn-timebox {
     -fx-background-color: linear-gradient(to bottom, -fx-base 0%, -fx-base-lighter 40%, -fx-base-ultraLight 100%);
     -fx-background-insets: -1 -3 -1 -3;
