Add medal number style.

--- a/ui-hncb.css
+++ b/ui-hncb.css
@@ -233,6 +233,12 @@
     -fx-padding: 2 5 2 5;
     -fx-background-radius: 1;
 }
+.hn-medal-text {
+    -fx-font-size: 19;
+    -fx-text-fill: #ffe420;
+    -fx-font-family: Arial;
+    -fx-font-weight: bold;
+}
 /*-- Function Key */
 .hn-funcKeyWrap {
     -fx-background-color: linear-gradient(rgba(77,77,77,.95) 10%, rgba(77,77,77,.75) 50%, rgba(77,77,77,.75) 100%);
