Add Pagination Styles.

--- a/ui-hncb.css
+++ b/ui-hncb.css
@@ -1084,13 +1084,17 @@ d. ProgressIndicator
     -fx-padding: 0;
     -fx-arrows-visible: true;
     -fx-tooltip-visible: false;
-    -fx-page-information-visible: false;
-    -fx-page-information-alignment: bottom;
+    -fx-page-information-visible: true;
+    -fx-page-information-alignment: top;
+    -fx-max-page-indicator-count: 10;
+    -fx-font-family: Arial;
 }
 .pagination .page {
     -fx-background-color: transparent;
 }
-
+.pagination-control .control-box {
+    -fx-spacing: 0;
+}
 .pagination .pagination-control .left-arrow {
     -fx-background-color: -fx-mark-color;
     -fx-background-insets: 1;
@@ -1104,46 +1108,42 @@ d. ProgressIndicator
     -fx-shape: "m 4.75,9.501 2.889,0 3.86,4.124 -3.86,4.125 -2.889,0 L 8.125,13.625 4.75,9.501 z";
     -fx-scale-shape: true;
 }
-.pagination .pagination-control .bullet-button {
-    -fx-background-color: -fx-mark-color;
-    -fx-background-insets: 4,5,6;
-    -fx-background-radius: 4em, 4em, 4em;
-    -fx-padding: 0.333em;
-}
 .pagination .pagination-control .left-arrow-button{
     -fx-padding: 2;
+    -fx-background-color: linear-gradient(-fx-base 10%, derive(-fx-base, -30%) 100%);
+    -fx-background-radius: 4 0 0 4;
+    -fx-background-inset: 1;
+    -fx-translate-x: 2;
 }
 .pagination .pagination-control .right-arrow-button {
     -fx-padding: 2;
+    -fx-background-color: linear-gradient(-fx-base 10%, derive(-fx-base, -30%) 100%);
+    -fx-background-radius: 0 4 4 0;
+    -fx-translate-x: -2;
+}
+.pagination .pagination-control .left-arrow-button:hover, .pagination .pagination-control .right-arrow-button:hover {
+    -fx-background-color: linear-gradient(-fx-base 10%, derive(-fx-base, -40%) 100%);
 }
 .pagination .pagination-control .number-button {
     -fx-padding: 2;
 }
-.pagination .pagination-control .bullet-button:hover {
-}
-.pagination .pagination-control .bullet-button:pressed {
-    -fx-background-insets: 4,5,6,7;
-}
-.pagination .pagination-control .bullet-button:selected {
-    -fx-background-insets: 4,5,6;
-}
-.pagination.bullet .pagination-control .left-arrow-button, .pagination.bullet .pagination-control .right-arrow-button {
-}
-.pagination .pagination-control .number-button {
-    -fx-background-insets: 0,1,2;
-}
 .pagination .pagination-control .number-button:hover {
-    -fx-background-insets: 0,1,2;
+    -fx-base: -fx-base-darker;
 }
 .pagination .pagination-control .number-button:pressed {
-    -fx-background-insets: 0,1,2,3;
 }
 .pagination .pagination-control .number-button:selected {
     -fx-base: -fx-base-darker;
     -fx-background-color: linear-gradient(-fx-base 10%, derive(-fx-base, -30%) 100%);
-    -fx-background-insets: 0,1,2;
+    -fx-background-insets: 0;
+    -fx-font-weight: bold;
 }
-
+.pagination .pagination-control .page-information {
+    -fx-translate-x: 0;
+}
+.pagination .pagination-control .page-information .text {
+    -fx-font-weight: bold;
+}
 /*** 07. Button ***/
 .button {
 }
