--- a/ui-hncb.css
+++ b/ui-hncb.css
@@ -127,7 +127,6 @@
 14. Loading
 
 *******************/
-
 /*** 00. Container & Elements ***/
 
 .hn-mainWrap {
@@ -355,7 +354,7 @@
 /*** 02. Menu ***/
 .hn-menuBar .menu {
     -fx-background-color: transparent;
-    -fx-padding: 1 6 0 4;
+    -fx-padding: 1 0 0 1;
 }
 .hn-menuBar .menu-button .label {
     -fx-text-fill: white;
@@ -368,7 +367,6 @@
     -fx-background-insets: 1 0 0 0;
     -fx-background-radius: 2 2 0 0;
 }
-
 .hn-menuBar .menu .context-menu {
     /* -fx-skin: "com.sun.javafx.scene.control.skin.ContextMenuSkin";
      -fx-background-color: black;
@@ -916,7 +914,7 @@
     -fx-background-color: linear-gradient(to right, rgba(255,255,255,0) 0, rgba(0,0,0,0.3) 50%, rgba(255,255,255,0) 100% );
 }
 .hn-Modal .hn-Modal-shadow {
-    -fx-background-color: linear-gradient(to bottom, #333333 0, rgba(255,255,255,0) 100%);
+    -fx-background-color: linear-gradient(to bottom, #333333 0, #555555 100%);
     -fx-background-radius: 1;
 }
 /* Modal Button */
@@ -958,13 +956,14 @@
     -fx-effect: dropshadow(three-pass-box, #666666, 5, 0.5, 0, 2);
 }
 .hn-reportPagination {
-    -fx-background-radius: 2 2 0 0;
-    -fx-background-color: rgba(11,11,11,0.8);
+    -fx-background-radius: 3 3 0 0;
+    -fx-background-color: linear-gradient( rgba(11,11,11,0.9) 40%, rgba(11,11,11,0) 100%);
 }
 .hn-reportContent {
     -fx-background-color: white;
-    -fx-background-radius: 5;
+    -fx-background-radius: 3;
     -fx-font-family: MingLiU, monospace;
+    -fx-effect: dropshadow(one-pass-box, #333333, 5, 0.2, 0, 2)
 }
 
 /*** 13. Splash ***/
@@ -1438,14 +1437,14 @@ d. ProgressIndicator
     -fx-background-color: #333333;
 }
 /*** b.Tooltip ***/
-.hn-tooltip {
+.tooltip {
     -fx-background-color: rgb(124, 132, 140), rgb(219, 224, 229), rgb(236, 241, 246);
     -fx-background-insets: 0,1,2;
     -fx-background-radius: 0 0 0 0;
     -fx-padding: 4 8 4 8;
     -fx-effect: dropshadow(three-pass-box , rgba(0,0,0,0.4) , 4, 0.0 , 4 , 5 );
 }
-.page-corner {
+.tooltip > .page-corner {
     -fx-padding: 0;
     -fx-background-color: transparent;
     -fx-shape: " ";
