--- a/ui-hncb.css
+++ b/ui-hncb.css
@@ -132,6 +132,11 @@
 .hn-mainWrap {
     -fx-background-color: radial-gradient(center 50% 10%, radius 70%, #505d6e 20%, #111111 100%);
 }
+.hn-mainWrap .text {
+    /* font color darken
+    -fx-stroke: black;: ;
+    -fx-stroke-width: 0.2;*/
+}
 .hn-mainWrapOverlay {
     /*-fx-background-image: url("../images/ptn-01.jpg");
     -fx-background-repeat: repeat;
@@ -339,8 +344,11 @@
 }
 
 /* Misc */
-.hn-errorText {
+.hn-errorText, .hn-errorText > .text {
     -fx-text-fill: -fx-error-base !important;
+    /* font color darken */
+    -fx-stroke: -fx-error-base !important;
+    -fx-stroke-width: 0.2;
 }
 
 /*** 01. MenuBar ***/
@@ -358,6 +366,9 @@
 }
 .hn-menuBar .menu-button .label {
     -fx-text-fill: white;
+    /* font color darken */
+    -fx-stroke: white;
+    -fx-stroke-width: 0.2;
 }
 .hn-menuBar .menu-button:hover,
 .hn-menuBar .menu-button:focused,
@@ -389,6 +400,9 @@
     -fx-font-size: 1em;
     -fx-padding: 0 6 0 0;
     -fx-text-fill: white;
+    /* font color darken */
+    -fx-stroke: white;
+    -fx-stroke-width: 0.2;
 }
 .hn-tabPane > .tab-pane *.tab-header-background {
     -fx-background-color: transparent;
@@ -422,6 +436,9 @@
 .hn-tabPane > .tab-pane .tab:selected .tab-label {
     -fx-text-fill: black;
     -fx-font-weight: bold;
+    /* font color darken */
+    -fx-stroke: black;
+    -fx-stroke-width: 0.2;
 }
 .hn-tabPane > .tab-pane .tab-close-button {
     -fx-background-color: -fx-mark-color;
@@ -486,6 +503,9 @@
 .hn-treeview-wrap .tab-pane .tab-label {
     -fx-padding: 0;
     -fx-text-fill: white;
+    /* font color darken */
+    -fx-stroke: white;
+    -fx-stroke-width: 0.2;
 }
 .hn-treeview-wrap .tab-pane *.tab-header-background {
     -fx-background-color: transparent;
@@ -647,13 +667,13 @@
     -fx-border-color: #aaaaaa;
     -fx-font-family: MingLiU, monospace;
     -fx-font-size: 16;
-    -fx-font-smoothing-type: gray;
+    -fx-font-smoothing-type: lcd;
     -fx-font-weight: bold;
-    -fx-text-fill: #000000;
+    -fx-text-fill: black;
 }
     /** Font-stroke-test **/
     .hn-tab-scrollpane > .scroll-pane .label > .text {
-        -fx-stroke-type: centered;
+        /* font color darken */
         -fx-stroke: black;
         -fx-stroke-width: 0.2;
     }
@@ -805,6 +825,10 @@
     -fx-background-radius: 3;
     -fx-padding: 4 15 5 15;
 }
+.button > .text {
+    -fx-stroke: black;
+    -fx-stroke-width: 0.2;
+}
 .button:focused {
     -fx-background-color: -fx-focus-color, -fx-base-darker, linear-gradient(to bottom,rgb(199,199,199) 0%,rgb(180,182,187) 100%), linear-gradient(to bottom,-fx-base-ultraLight 0%,-fx-base 75%,-fx-base-light 100%);
     -fx-background-insets: -0.4,1,2,3;
@@ -904,6 +928,9 @@
     -fx-font-weight: bold;
     -fx-text-fill: white;
     -fx-effect: dropshadow(gaussian, #ffffff, 10, 0.3, 0, 0);
+    /* font color darken */
+    -fx-stroke: white;
+    -fx-stroke-width: 0.2;
 }
 .hn-Modal .hn-Modal-title-shadow {
     -fx-background-color: linear-gradient(to right, transparent 0, #333333 50%, transparent 100%);
@@ -979,6 +1006,9 @@
     -fx-text-fill: white;
     -fx-cursor: hand;
     -fx-background-radius: 1;
+    /* font color darken */
+    -fx-stroke: white;
+    -fx-stroke-width: 0.2;
 }
 .hn-splash .button:focused {
     -fx-background-color: transparent, #d35078, linear-gradient(to bottom, #66122d 0%, #793140 100%), linear-gradient(to bottom, #793140 0%, #66122d 100%);
@@ -1002,6 +1032,9 @@
 .hn-loading .label {
     -fx-text-fill: white;
     -fx-font-size: 24;
+    /* font color darken */
+    -fx-stroke: white;
+    -fx-stroke-width: 0.2;
 }
 .hn-loading-seconds {
     -fx-background-color: #ffbaca;
@@ -1065,6 +1098,11 @@ d. ProgressIndicator
     -fx-highlight-text-fill: white;
     -fx-effect: dropshadow(one-pass-box, gray, 1, 1.0, 0, 1);
 }
+.text-field .text {
+    /* font color darken */
+    -fx-stroke: black;
+    -fx-stroke-width: 0.2;
+}
 .text-field.hn-required {
     -fx-background-color: #999999, white, linear-gradient( white 0%, white 100%), -fx-required-gradient;
 }
@@ -1078,6 +1116,11 @@ d. ProgressIndicator
 .text-field.error {
     -fx-background-color: -fx-error-base, white, transparent, -fx-error-gradient;
     -fx-text-fill: derive(-fx-error-base, -10%);
+}
+.text-field.error .text {
+    /* font color darken */
+    -fx-stroke: red;
+    -fx-stroke-width: 0.2;
 }
 
 /*** 05. TableView ***/
@@ -1167,6 +1210,10 @@ d. ProgressIndicator
 /*** 07. Button ***/
 .button {
 }
+.button > .text {
+    -fx-stroke: black;
+    -fx-stroke-width: 0.2;
+}
 .button:focused {
 }
 .button:focused:hover {
@@ -1191,6 +1238,8 @@ d. ProgressIndicator
 }
 .check-box .text {
     -fx-translate-y: 2;
+    -fx-stroke: black;
+    -fx-stroke-width: 0.2;
 }
 .check-box .box {
     -fx-background-color: transparent, #999999, linear-gradient( white 0%, white 100%), -fx-box-gradient;
@@ -1241,6 +1290,8 @@ d. ProgressIndicator
 }
 .radio-button .text {
     -fx-translate-y: 2;
+    -fx-stroke: black;
+    -fx-stroke-width: 0.2;
 }
 .radio-button .radio {
     -fx-background-color:  transparent, #999999, linear-gradient( white 0%, white 100%), -fx-box-gradient;
@@ -1354,6 +1405,10 @@ d. ProgressIndicator
 .combo-box:showing .list-cell {
     -fx-text-fill: black;
 }
+.combo-box .list-cell > .text {
+    -fx-stroke: black;
+    -fx-stroke-width: 0.2;
+}
 .combo-box-popup .list-view {
     -fx-background-color: rgb(76,81,86),rgb(228,233,238);
     -fx-background-insets: 0,1;
@@ -1392,6 +1447,10 @@ d. ProgressIndicator
     -fx-text-fill: #bababa;
     -fx-alignment: center;
 }
+.tab:top .tab-label > .text {
+    -fx-stroke: #bababa;
+    -fx-stroke-width: 0.2;
+}
 .tab:top:hover {
     -fx-background-color: linear-gradient(derive(#666666,10%) 70%, derive(#333333,20%) 100%);
 }
@@ -1400,6 +1459,10 @@ d. ProgressIndicator
 }
 .tab:selected .tab-label {
     -fx-text-fill: #000000;
+}
+.tab:selected .tab-label > .text {
+    -fx-stroke: black;
+    -fx-stroke-width: 0.2;
 }
 .tab-close-button {
     -fx-background-color: -fx-mark-color;
