--- a/ui-hncb.css
+++ b/ui-hncb.css
@@ -401,7 +401,7 @@
     -fx-background-color: transparent;
 }
 .hn-tabPane > .tab-pane .tab-label {
-    -fx-font-size: 1em;
+    -fx-font-size: 14;
     -fx-padding: 0 6 0 0;
     -fx-text-fill: white;
     /* font color darken */
@@ -412,7 +412,7 @@
     -fx-background-color: transparent;
 }
 .hn-tabPane > .tab-pane .headers-region {
-    -fx-translate-x: -6;
+    -fx-translate-x: -7;
 }
 .hn-tabPane > .tab-pane .tab {
     -fx-background-insets: 0 3 0 0;
@@ -1130,7 +1130,32 @@ d. ProgressIndicator
 /*** 05. TableView ***/
 .table-view {}
 .table-view:focused {}
-.table-row-cell {}
+.table-cell .text {
+    -fx-text-fill: black;
+}
+/* Selected row */
+.table-view:focused .table-row-cell:filled:focused:selected {
+    -fx-background-color: -fx-base-light;
+}
+.table-view:focused .table-row-cell:filled:focused:selected .table-cell {
+    -fx-text-fill: black;
+}
+/* Selected row when table not focused */
+.table-row-cell:filled:focused:selected {
+    -fx-background-color: -fx-base-light;
+}
+/* Row hovered */
+.table-view:row-selection .table-row-cell:filled:hover {
+    -fx-background-color: -fx-base-lighter;
+}
+/* Selected row hovered */
+.table-view:focused .table-row-cell:filled:focused:selected:hover {
+    -fx-background-color: -fx-base-lighter;
+}
+/* Selected row hovered when table not focused */
+.table-view:row-selection .table-row-cell:filled:focused:hover {
+    -fx-background-color: -fx-base-lighter;
+}
 .table-row-cell:odd {}
 .table-view .column-header, .table-view .filler {
     -fx-font-size: 16;
